Web Inspector: AppCache manifest 404 doesn't produce errors in console, manifest resource request always loading indicator https://bugs.webkit.org/show_bug.cgi?id=147135

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-22
Reviewed by Alexey Proskuryakov.

Source/WebCore:

* loader/appcache/ApplicationCacheGroup.cpp:
(WebCore::ApplicationCacheGroup::didReceiveResponse):
Always pass a document loader instead of passing null for the manifest request.

(WebCore::ApplicationCacheGroup::didReceiveManifestResponse):
Since we will be cancelling the resource handle ourselves in didReceiveResponse
before receiving the didFail resource handle delegates, we should update the
inspector about this resource load failing due to a cancel.

(WebCore::ApplicationCacheGroup::didFinishLoadingManifest):
(WebCore::ApplicationCacheGroup::checkIfLoadIsComplete):
Update the MessageSource from "Other" to "AppCache".

LayoutTests:

* http/tests/appcache/404-manifest-expected.txt:
* http/tests/appcache/abort-cache-ondownloading-manifest-404-expected.txt:
* http/tests/appcache/deferred-events-delete-while-raising-expected.txt:
* http/tests/appcache/deferred-events-delete-while-raising-timer-expected.txt:
* http/tests/appcache/deferred-events-expected.txt:
* http/tests/appcache/fail-on-update-2-expected.txt:
* http/tests/appcache/fail-on-update-expected.txt:
* http/tests/appcache/remove-cache-expected.txt:
Update with new Console errors about manifest 404s.

Canonical link: https://commits.webkit.org/165254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187185 268f45cc-cd09-0410-ab3c-d52691b4dbfc